--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,37 @@
-/node_modules
+# Next.js build output
+.next/
+out/
+
+# Node.js modules
+node_modules/
+npm-debug.log
+yarn-error.log
+
+# Editor settings and caches
+*.swp
+*.swo
+*.sublime*
+.vscode/
+.idea/
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# Environment variables
 .env
+.env.local
+.env.*.local
+.env.*.test
+
+# Logs
+*.log
+logs/
+
+# Miscellaneous
+*.pid
+*.seed
+*.pid.lock
+
+# Optional: Uncomment the following line if you don't wish to include the original source maps from production builds.
+# *.map
