--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ out/
 node_modules/
 npm-debug.log
 yarn-error.log
+yarn-debug.log*
+yarn.lock
+package-lock.json
 
 # Editor settings and caches
 *.swp
